--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <div id="wrapper">
 
 <div id="wondercardbox">
- <h1 class="title"><span id="wcTitle">Choose a wondercard file</span></h1>
+ <h1 class="title"><span id="wcTitle">Choose a wonder card file</span></h1>
  <img id="pkmnImg" src="img/large/pokemon/regular/0.png" alt="pokemon" />
- <p id="cardText"><input type="file" id="input" accept=".wc6,.wc7,.wc6full,.wc7full,.wc5,.pgf,.wc4,.pcd,.pgt" onchange="parseFile(this.files)" /></p>
+ <p id="cardText"><input type="file" id="input" accept=".wc8, .wc7full,.wc7,.wc6full,.wc6,.wc5,.pgf,.wc4,.pcd,.pgt" onchange="parseFile(this.files)" /></p>
 </div>
 
 <div id="wcfullbox">
