--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <select id="wcslottoggle"></select> 
  </div>
  <p>Choose another wondercard file:
-  <input type="file" id="input" accept=".wc6,.wc7,.wc6full,.wc7full,.wc5,.pgf,.wc4,.pcd,.pgt" onchange="parseFile(this.files)" />
+  <input type="file" id="input" accept=".wc8, .wc7full,.wc7,.wc6full,.wc6,.wc5,.pgf,.wc4,.pcd,.pgt" onchange="parseFile(this.files)" />
  </p>
 </div>
 
