--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 
 <footer>
   <div>
-    <a href="https://kirzi.github.io/wcparse/">kirzi.github.io/wcparse</a> |
-    <a href="https://github.com/Kirzi/wcparse">What is this? More info on Github</a>
+      <a href="https://pp-theslayer.github.io/wcparse/">pp-theslayer.github.io/wcparse</a> |
+   
   </div>
 </footer>
 
