--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 <header>
-  <div id="wcparseLink"><a href="https://kirzi.github.io/wcparse/">kirzi.github.io/wcparse</a></div>
+  <div id="wcparseLink"><a href="https://pp-theslayer.github.io/wcparse/">pp-theslayer.github.io/wcparse</a></div>
 </header>
 
 <div id="wrapper">
